# claude-manager

./: .claude-manager-prefs.json  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PENDING.md  README.md  VERSION.json  fleet-app.json  install.sh  pyproject.toml  setup.sh
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.planning/: handoff-fleet-watchdog-deploy-2026-04-16.md  terminal-scripts-refactor.md
assets/: generate_icon.py  icon.icns
docs/: GOTCHAS.md  RESTART-PROMPT.md  SESSION-REPORT-2026-04-14.md  api.md  architecture.md  deployment.md  development.md  fleet-setup.md
installers/: install-linux.sh  install-macos.sh  install-windows.ps1
scripts/: gen_version.py  install-linux.sh  install-mac.sh  install-windows.ps1  setup-venv.py
shortcuts/: Claude Manager API.bat  Claude Manager API.command  Claude Manager TUI.bat  Claude Manager TUI.command  Claude Manager.bat  Claude Manager.command  README.md  claude-manager.desktop  launch.sh
src/: __main__.py  auth.py  command_adapter.py  config.py  desktop.py  executor.py  fleet.py  launcher.py  main.py  mux_parser.py  project_identity.py  scanner.py  server.py  session_link.py  ssh_pool.py  state_store.py  subprocess_utils.py  tmux_manager.py
tests/: conftest.py  test_api_endpoints.py  test_api_integration.py  test_command_adapter.py  test_config.py  test_desktop.py  test_fleet.py  test_git_state.py  test_launch_edge_cases.py  test_launcher.py  test_launcher_integration.py  test_launcher_paths.py  test_main.py  test_mux_parser.py  test_project_identity.py  test_scan_cache.py  test_scan_paths.py  (+9 more)
(+27 files in other folders)
